--- a/marionsms/templates/macros/navbar.html
+++ b/marionsms/templates/macros/navbar.html
@@ -23,8 +23,8 @@
       <li class="{{ 'active' if section == 'report' else '' }}">
         <a href="/report">Report</a>
       </li>
-      <li class="{{ 'active' if section == 'questions' else '' }}">
-        <a href="/questions">Questions</a>
+      <li class="{{ 'active' if section == 'messages' else '' }}">
+        <a href="/messages">Messages</a>
       </li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
