--- a/marionsms/templates/schedule.html
+++ b/marionsms/templates/schedule.html
@@ -1,13 +1,19 @@
-{% macro scheduled_question(question_and_time) -%}
+{% macro scheduled_question(scheduled_message) -%}
 <td>
-  <abbr title="{{ question_and_time[1]}}">{{ question_and_time[1] }}</a>
+  <abbr title="{{ scheduled_message.message.text }}">{{ scheduled_message.message.name }}</a>
 </td>
 <td>
   {% set p = r()%}
   <span class="pie">{{ p }}, {{ 1 - p }}</span>
 </td>
-<td>{{ question_and_time[2] }}</td>
-<td class="actions"><a href="#">Reschedule</a> or <a href="#">Delete</a></td>
+<td>{{ scheduled_message.schedule_as_string }}</td>
+<td class="actions">
+  <form class="inline-form" 
+        action="/schedule?__METHOD__=DELETE&scheduled_message_id={{scheduled_message.id}}" 
+        method="POST">
+    <button class="btn btn-danger btn-xs">Delete</button>
+  </form>
+</td>
 {%- endmacro %}
 
 {% extends "layouts/base.html" %}
@@ -28,7 +34,7 @@ $(function(){
 {% block body %}
 <div class="wrapper">
   {{ navbar('schedule') }}  
-
+  {{ flash() }}
   <table class="table">
     <thead>
       <tr>
@@ -41,16 +47,16 @@ $(function(){
     </thead>
     <tbody>
       {% for phone_number in schedule %}
-        {% set question_times = schedule[phone_number] %}
+        {% set scheduled_messages = schedule[phone_number] %}
       <tr>
-        <td rowspan={{question_times | length}}>
+        <td rowspan={{ scheduled_messages | length}}>
           <a href="tel:+1{{phone_number}}">{{ phone_number }}</a>
         </td>
-        {{ scheduled_question(question_times[0]) }}        
+        {{ scheduled_question(scheduled_messages[0]) }}        
       </tr>
-        {% for question_and_time in question_times[1:] %}
+        {% for sm in scheduled_messages[1:] %}
       <tr>
-          {{ scheduled_question(question_and_time) }}
+          {{ scheduled_question(sm) }}
       </tr>      
         {% endfor %}
       {% endfor %}
@@ -61,14 +67,21 @@ $(function(){
   
   <form action="/schedule" method="POST">
     <legend>Add to the Schedule</legend>
-    <div class="form-group">
-      <input type="file" name="schedule-file">
-      <p class="help-block">Upload a <abbr title="comma-separated values">CSV</abbr> file in the <a href="/help#csv-fmt">proper format</a>. Or, enter a new record below:</p>
-    </div>
+    <!-- <div class="form-group"> -->
+    <!--   <input type="file" name="schedule-file"> -->
+    <!--   <p class="help-block">Upload a <abbr title="comma-separated values">CSV</abbr> file in the <a href="/help#csv-fmt">proper format</a>. Or, enter a new record below:</p> -->
+    <!-- </div> -->
     <div class="form-group">
       <input type="text" name="phone-number" placeholder="Phone Number">
-      <input type="text" name="question-id" placeholder="Question ID">
-      <input type="text" name="time" placeholder="Scheduled Time">
+      <input type="text" name="message-id" placeholder="Message/Question ID">
+      <select name="frequency">
+        <option value="daily">Daily</option>
+        {% for dow in DAYS_OF_WEEK %}
+        <option value="{{ dow }}">{{ dow | capitalize }}</option>
+        {% endfor %}
+      </select>
+      at 
+      <input type="time" name="time" placeholder="Scheduled Time">
       <p class="help-block">Be sure to enter the time in the <a href="/help#time-fmt">proper format</a>.</p>
     </div>
     <button class="btn btn-info">Add to Schedule</button>
