user accounts. usin' bcrypt, like a boss.

--- a/marionsms/templates/home.html
+++ b/marionsms/templates/home.html
@@ -16,8 +16,8 @@ $(function(){
 <div class="wrapper">
   {{ navbar("home") }}
 
-<h1>Welcome back to Marion SMS</h1>
-
+<h1>Marion SMS</h1>
+{{ flash() }}
 <p>
   Today, we've introduced a feature which will blow your minds. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
 </p>
