--- a/marionsms/templates/landing.html
+++ b/marionsms/templates/landing.html
@@ -48,7 +48,7 @@
                  placeholder="Password">
         </div>
         
-        <button type="submit" class="btn btn-default btn-sm">Login</button>
+        <button type="submit" class="btn btn-default btn-sm" style="margin-top: 5px;">Login</button>
       </form>
     </div>
   </div>
