--- a/marionsms/templates/schedule.html
+++ b/marionsms/templates/schedule.html
@@ -64,28 +64,46 @@ $(function(){
     <legend>Add to the Schedule</legend>
 
     <div class="form-group">
-      <input type="file" name="schedule-file">
-      <p class="help-block">Upload a <abbr title="comma-separated values">CSV</abbr> file in the <a href="/help#csv-fmt">proper format</a>. Or, enter a new record below:</p>
+      <label>Phone Number (+1xxxyyyzzzz)</label>
+      <input class="form-control" type="text" name="phone-number" placeholder="Phone Number">
     </div>
-
     <div class="form-group">
-      <input type="text" name="phone-number" placeholder="Phone Number">
-      <select name="message-id">
+      <label>Which message should be sent?</label>
+      <select class="form-control" name="message-id">
         {% for msg in messages %}
         <option value="{{ msg.id }}">{{ msg.name | capitalize }}</option>
         {% endfor %}
       </select>
-      <select name="frequency">
+    </div>
+    <div class="form-group">
+      <label>Frequency</label>
+      <select class="form-control" name="frequency">
         <option value="daily">Daily</option>
         {% for dow in DAYS_OF_WEEK %}
         <option value="{{ dow }}">{{ dow | capitalize }}</option>
         {% endfor %}
       </select>
-      at 
-      <input type="time" name="time" placeholder="Scheduled Time">
+    </div>
+    <div class="form-group">
+      <label>Time</label>
+      <input class="form-control" type="time" name="time" placeholder="Scheduled Time">
       <p class="help-block">Be sure to enter the time in the <a href="/help#time-fmt">proper format</a>.</p>
     </div>
+
+    <div class="form-group">
+      <button class="btn btn-info">Add to Schedule</button>
+    </div>
+    
+
+  <div class="form-group">
+    <legend>Or upload a spreadsheet: </legend>
+    <input type="file" name="schedule-file">
+    <p class="help-block">Upload a <abbr title="comma-separated values">CSV</abbr> file in the <a href="/help#csv-fmt">proper format</a>.</p>
+  </div>
+
+  <div class="form-group">
     <button class="btn btn-info">Add to Schedule</button>
+  </div>
   </form>
 </div>
 {% endblock %}
