one-time messages

--- a/marionsms/templates/messages.html
+++ b/marionsms/templates/messages.html
@@ -33,7 +33,7 @@ $(function(){
           <form class="inline-form" 
                 action="/messages?__METHOD__=DELETE&message_id={{message.id}}" 
                 method="POST">
-            <button class="btn btn-danger btn-xs">Delete</button>
+            <button class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-remove"></span> Delete</button>
           </form>
         </td>
       </tr>
