--- a/marionsms/templates/macros/navbar.html
+++ b/marionsms/templates/macros/navbar.html
@@ -1,5 +1,5 @@
 {% macro navbar(section) -%}
-<nav class="navbar" role="navigation">
+<nav class="navbar navbar-default" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
