--- a/marionsms/templates/schedule.html
+++ b/marionsms/templates/schedule.html
@@ -110,7 +110,7 @@ $(function(){
         </select>
       </div>
       <div class="form-group col-lg-4">
-        <label>Time</label>
+        <label>Time [GMT]</label>
         <input class="form-control" type="time" 
                name="time" placeholder="Scheduled Time">
       </div>
